[gd_scene load_steps=6 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://Src/Actors/Enemy_01.gd" type="Script" id=2]
[ext_resource path="res://Src/Actors/Hitbox.gd" type="Script" id=3]

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 32, 30 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 32, 30 )

[node name="Enemy_01" type="KinematicBody2D" groups=[
"Enemy",
]]
modulate = Color( 1, 0, 0, 1 )
scale = Vector2( 0.5, 0.5 )
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="."]
modulate = Color( 1, 0, 0, 1 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 3 )

[node name="Hitbox" type="Area2D" parent="." groups=[
"Enemy",
]]
script = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
visible = false
shape = SubResource( 2 )

[node name="StunTimer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true
[connection signal="area_entered" from="Hitbox" to="." method="_on_Hitbox_area_entered"]
[connection signal="timeout" from="StunTimer" to="." method="_on_StunTimer_timeout"]
